Fix motivation img width on mobile

--- a/client/src/pages/AboutUs/styles.sass
+++ b/client/src/pages/AboutUs/styles.sass
@@ -10,6 +10,10 @@
     img
       width: 25rem
 
+    @media (max-width: $xs-starts)
+      img
+        width: 100%
+
   .why-we-do-text
     max-width: 37.5rem
     @media (max-width: $sm-starts)
